--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,26 @@
 alembic==1.4.2
+certifi==2020.6.20
+chardet==3.0.4
 click==7.1.2
 Flask==1.1.2
 Flask-Migrate==2.5.3
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.4
+idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
 joblib==0.16.0
 Mako==1.1.3
 MarkupSafe==1.1.1
 numpy==1.19.1
-psycopg2-binary==2.8.5
+psycopg2==2.8.5
 python-dateutil==2.8.1
 python-editor==1.0.4
+requests==2.24.0
 scikit-learn==0.23.1
 scipy==1.5.2
 six==1.15.0
-sklearn==0.0
 SQLAlchemy==1.3.18
 threadpoolctl==2.1.0
+urllib3==1.25.10
 Werkzeug==1.0.1
